# quran-clip

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run.sh
data/: reciters.json  surahs.json
quran_clip/: __init__.py  __main__.py  cli.py  concatenator.py  config.py  downloader.py  metadata.py  resolver.py  validators.py
tests/: conftest.py  test_cli.py  test_concatenator.py  test_downloader.py  test_metadata.py  test_resolver.py  test_validators.py
